--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                         customizable sizes and error correction levels. 
                         Built using HTML, CSS and JavaScript 
                         for seamless and efficient QR code generation.                        </p>
-                    <a href="https://github.com/TejasManikanta/QR-Code-Generator" class="cta">View Project</a>
+                    <a href="https://qr-code-generator-six-opal.vercel.app/" class="cta">View Project</a>
                 </div>
             </div>
             <div class="portfolio-item" data-aos="fade-in" data-aos-duration="300ms">
