--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                          of products, view detailed information about each product, 
                          and navigate through a responsive design that works on various devices.
                     </p>
-                    <a href="https://github.com/TejasManikanta/E---Commerce-Website-Basic" class="cta">View Project</a>
+                    <a href="https://basic-ecommerce-website-murex.vercel.app/" class="cta">View Project</a>
                 </div>
                 <div class="portfolio-img has-margin-left">
                     <img src="commerce-image.png" alt="">
