--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </nav>
         <div class="landing-text">
            
-            <h6>Hai, I'm</h6>
+            <h6>Hai, Iam</h6>
             <h1>Tejas Manikanta</h1>
             <div class="scrolldown">
                 <span></span>
@@ -82,7 +82,7 @@
                     <h6>Myself</h6>
                 </div>
                 <br>
-                <h3> Hi! This is Tejas Manikanta. </h3>
+                <h3> Hey there! I'm Tejas Manikanta. </h3>
                 <br>
                 <p>
                     I aim to leverage my skills and knowledge to contribute to innovative 
