--- a/index.html
+++ b/index.html
@@ -85,13 +85,11 @@
                 <h3> Hey there! I'm Tejas Manikanta. </h3>
                 <br>
                 <p>
-                    I aim to leverage my skills and knowledge to contribute to innovative 
-                    projects and cutting-edge solutions in the tech industry. My goal is
-                     to secure a challenging position in a dynamic organization where I can
-                      apply my expertise in software development. I am committed to continuous
-                       learning and professional growth, with a long-term objective of making
-                        significant advancements in the field of technology and driving impactful change.
-                    
+                    I am a fourth-year IT Student at SRKR Engineering College, Bhimavaram.
+                    I am ready to contribute to an innovative and growing organization. 
+                    I am eager to apply my academic knowledge and project experience in a dynamic role,
+                    while continuously learning and evolving in the field. Looking forward to embracing 
+                    challenges and opportunities that drive both personal and professional growth.
                     <br> 
                     <br>
                     <a href="https://drive.google.com/file/d/1yOSBie50lrC74JbiwTz1yJ2S-5oB0SQk/view?usp=drivesdk" class="cta">Checkout my Resume</a>
