--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="up" id="up">
             <i class="fas fa-chevron-up"></i>
         </div>
-        <p>&copy; 2024 Tejas Manikanta</p>
+        <p>&copy; 2024 Tejas Manikanta. All rights reserved.</p>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     
