--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="social-media"  >
                     <ul class="nav-list"  >
                         <li>
-                            <a href="https://www.linkedin.com/in/tejas-manikanta-24a141253?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="icon-link">
+                            <a href="https://www.linkedin.com/in/tejas-manikanta-ivvala-24a141253/" class="icon-link">
                                 <i class="fab fa-linkedin" style="font-size: 24px; color: #0072b1;"></i> 
                             </a>
                         </li>
