--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 </li>
                 <li>
-                    <a href="#experience" class="nav-link">Experience</a>
+                    <a href="#experience" class="nav-link">Internships</a>
 
                 </li>
                
