--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <section class="experience" id="experience">
         <div class="container" >
             <div class="section-heading">
-                <h1>Experience</h1>
+                <h1>Internships</h1>
                 <h6>Some of my works</h6>
             </div>
             <div class="timeline" >
