--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     challenges and opportunities that drive both personal and professional growth.
                     <br> 
                     <br>
-                    <a href="https://drive.google.com/file/d/1TNlmFMwnbbHrymyYjV5nt7HY39wqsXte/view?usp=drivesdk" class="cta">Checkout my Resume</a>
+                    <a href="https://drive.google.com/file/d/1Q3KM2ogqMsJc8_Wrhpr8sqrCSZCJeWoV/view?usp=sharing" class="cta">Checkout my Resume</a>
                     
                 </p>
                 <br>
