--- a/index.html
+++ b/index.html
@@ -86,11 +86,9 @@
                 <h3> Hey there! I'm Tejas Manikanta. </h3>
                 <br>
                 <p>
-                    I am a fourth-year IT Student at SRKR Engineering College, Bhimavaram.
-                    I am ready to contribute to an innovative and growing organization. 
-                    I am eager to apply my academic knowledge and project experience in a dynamic role,
-                    while continuously learning and evolving in the field. Looking forward to embracing 
-                    challenges and opportunities that drive both personal and professional growth.
+                   A recently graduated Information Technology student from SRKR Engineering College in the year 2025,
+                    seeking an entry-level developer role in a reputed organization. Eager to contribute strong programming skills
+                    in Python, Java, HTML, CSS, JavaScript, and MySQL to build impactful solutions while continuously learning and growing in a dynamic environment.
                     <br> 
                     <br>
                     <a href="https://drive.google.com/file/d/1rt5fXPxncjCf9QY_y5vopSPvnZvC3_SZ/view?usp=sharing" class="cta">Checkout my Resume</a>
